<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TweetFeed</string>
    <string name="login_label">Connect to TweetFeed</string>
    <string name="title_activity_timeline">TweetFeed</string>
    <string name="title_activity_tweet">TweetFeed</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="body">Body</string>
    <string name="compose_tweet">Compose Tweet</string>
    <string name="whats_happening">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="char_count">140 chars left</string>
    <string name="name">Name</string>
    <string name="timestamp">Timestamp</string>
    <string name="view_profile">View Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tagline">Tagline</string>
    <string name="tweets_count">Tweets Count</string>
    <string name="followers_count">Followers Count</string>
    <string name="friends_count">Friends Count</string>
</resources>