<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:background="#FFFFFF"
    android:descendantFocusability="blocksDescendants" >

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/ivProfileImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvName"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:hint="@string/name"
        android:layout_alignTop="@+id/ivProfileImage"
        android:layout_marginRight="3dp"
        android:textSize="15sp"
        android:textStyle="bold" />

    <com.codepath.apps.mysimpletweets.utils.LinkifiedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvBody"
        android:hint="@string/body"
        android:layout_below="@+id/tvName"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_marginTop="5dp"
        android:autoLink="all"
        android:linksClickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvUserName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvName"
        android:layout_toEndOf="@+id/tvName"
        android:hint="@string/username"
        android:textColor="#888888"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTimestamp"
        android:layout_below="@+id/tvBody"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/timestamp"
        android:layout_marginTop="5dp"
        android:paddingRight="10dp"
        android:textColor="#4EADFF"
        android:textSize="12sp"
        android:textStyle="italic" />

</RelativeLayout>