<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/compose_tweet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:weightSum="1">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etComposeTweet"
        android:hint="@string/whats_happening"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="top"
        android:textSize="15sp"
        android:maxLength="140" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet"
        android:id="@+id/btnTweet"
        android:layout_below="@+id/etComposeTweet"
        android:layout_alignRight="@+id/etComposeTweet"
        android:layout_alignEnd="@+id/etComposeTweet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/char_count"
        android:id="@+id/tvCharCount"
        android:layout_below="@+id/etComposeTweet"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp"
        android:paddingLeft="2dp" />
</RelativeLayout>