<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/rlUserHeader"
        android:background="@drawable/tweet_background">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:hint="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:hint="@string/username"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUserName"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:hint="@string/tagline"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="13sp"
            android:textColor="#888888"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp" />

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llCounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlUserHeader"
        android:background="@drawable/header_counts_background"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tvTweetsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"
            android:hint="@string/tweets_count"
            android:minWidth="80dp"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFollowersCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"
            android:hint="@string/followers_count"
            android:minWidth="120dp"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFriendsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/friends_count"
            android:minWidth="120dp"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>